--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="form-group">
                             <label class="">Password:</label>
-                            <input class="input input-lg" type="text" name="password" required>
+                            <input class="input input-lg" type="password" name="password" required>
                         </div>
                         <button class="btn btn-info">Login</button>
                     </form>
